--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
+html, body {
   width: 100%;
   height: auto;
+  scroll-behavior: smooth;
 }
 
 .home {
@@ -34,24 +34,32 @@ nav {
 }
 
 nav ul {
-  background-color: rgba(0, 0, 0, .7);
+  background-color: rgba(0, 0, 0, 0.7);
   line-height: 10vh;
   list-style: none;
   text-align: end;
 }
 
-nav ul li{
+nav ul li {
   display: inline-block;
   padding: 0 3vw;
 }
 
-nav ul li:last-child{
+nav ul li:last-child {
   padding-right: 6vw;
 }
 
-nav a{
+nav a {
+  text-decoration: none;
   color: #fff;
   font: 20px "Times New Roman", Times, serif;
+}
+
+nav a:hover {
+  text-decoration: none;
+  color: #fff;
+  font: 22px "Times New Roman", Times, serif;
+  transition: .5s;
 }
 
 .name-main {
@@ -93,11 +101,10 @@ nav a{
   font-family: "Times New Roman", Times, serif;
 }
 
-.about-title span {
-  padding: 0 140px;
-  text-align: center;
-  color: #000;
+.about-title .iconify {
+  margin : 0 120px;
   font-size: 100px;
+  text-align: center;
 }
 
 .about-text {
@@ -123,14 +130,14 @@ nav a{
   text-align: center;
 }
 
-.camera-icon span {
+.camera-icon .iconify {
   color: #fff;
   font-size: 100px;
 }
 
-.projects h1{
+.projects h1 {
   padding-bottom: 10vh;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 100px;
   color: #fff;
 }
@@ -138,8 +145,35 @@ nav a{
 .picture {
   width: 80%;
   height: auto;
-
 }
+
+.contacts {
+  width: 100%;
+  height: 60vh;
+  background-color: aliceblue;
+  padding: 18vh 0;
+}
+
+.contacts-title h1 {
+  text-transform: uppercase;
+  font-size: 70px;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.contacts-text p {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 25px;
+}
+
+.contacts-social {
+  padding: 6vh 0;
+}
+
+.contacts-social .iconify {
+  font-size: 30px;
+  color: #000;
+}
+
 
 footer {
   text-align: center;
