--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
+@font-face {
+  font-family: 'Signature';
+  src: url('Fonts/Signature.woff2') format('woff2'),
+      url('Fonts/Signature.woff') format('woff');
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 html, body {
   width: 100%;
   height: auto;
@@ -13,17 +22,6 @@ html, body {
   width: 100%;
   height: 100vh;
   background-color: #0f0f0f;
-}
-
-.logo {
-  position: fixed;
-  z-index: 3;
-}
-
-.logo img {
-  padding: 2%;
-  width: 22%;
-  height: auto;
 }
 
 nav {
@@ -52,7 +50,7 @@ nav ul li:last-child {
 nav a {
   text-decoration: none;
   color: #fff;
-  font: 20px "Times New Roman", Times, serif;
+  font: 20px 'Itim', cursive;
 }
 
 nav a:hover {
@@ -61,6 +59,19 @@ nav a:hover {
   font: 22px "Times New Roman", Times, serif;
   transition: .5s;
 }
+
+.logo {
+  position: fixed;
+  padding: 20px 10px;
+  left: 0;
+  top: 0;
+}
+
+.logo p {
+  font: 25px "Signature";
+  color: #fafafa;
+}
+
 
 .name-main {
   display: flex;
