--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald&family=Trispace&display=swap');
 
 @font-face {
   font-family: 'Signature';
@@ -18,60 +18,93 @@ html, body {
   scroll-behavior: smooth;
 }
 
+/* navbar */
+
+nav{
+  height: auto;
+  background-color: rgba(10, 10, 10, 0.9);
+}
+
+nav .navbar-brand{
+  color: #fafafa;
+  font: 23px "Signature";
+}
+
+.nav-item {
+  text-align: center;
+}
+
+nav .navbar-nav a {
+  text-decoration: none;
+  color: #fafafa;
+  font: 23px 'Oswald', sans-serif;
+  margin: 0 1.5vw;
+}
+
+nav .navbar-nav a:hover {
+  text-decoration: none;
+  color: #fafafa;
+}
+
+.navbar-toggler{
+  border: none !important;
+}
+
+.hamburger span {
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 2px;
+  margin-top: 6px;
+  background: #fafafa;
+  transition: all 0.4s;
+}
+
+.hamburger span:before, .hamburger span:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  left: 0;
+  background: #fafafa;
+  position: absolute;
+  transition: all 0.4s;
+}
+
+.hamburger span:before {
+  top: -6px;
+}
+
+.hamburger span:after {
+  bottom: -6px;
+}
+
+.hamburger.hamburger-icon {
+  transform: translate(0, -50%);
+}
+
+.hamburger.close.hamburger-icon span {
+  transform: rotate(180deg);
+  background: transparent;
+}
+
+.hamburger.close.hamburger-icon span:before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.hamburger.close.hamburger-icon span:after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
+/* homepage */
+
 .home {
   width: 100%;
   height: 100vh;
   background-color: #0f0f0f;
 }
-
-nav {
-  position: fixed;
-  width: 100%;
-  height: auto;
-  z-index: 2;
-}
-
-nav ul {
-  background-color: rgba(0, 0, 0, 0.7);
-  line-height: 10vh;
-  list-style: none;
-  text-align: end;
-}
-
-nav ul li {
-  display: inline-block;
-  padding: 0 3vw;
-}
-
-nav ul li:last-child {
-  padding-right: 6vw;
-}
-
-nav a {
-  text-decoration: none;
-  color: #fff;
-  font: 20px 'Itim', cursive;
-}
-
-nav a:hover {
-  text-decoration: none;
-  color: #fff;
-  font: 22px "Times New Roman", Times, serif;
-  transition: .5s;
-}
-
-.logo {
-  position: fixed;
-  padding: 20px 10px;
-  left: 0;
-  top: 0;
-}
-
-.logo p {
-  font: 25px "Signature";
-  color: #fafafa;
-}
-
 
 .name-main {
   display: flex;
@@ -83,8 +116,10 @@ nav a:hover {
 }
 
 .name-main h1 {
-  font-size: 100px;
+  font-size: 6vw;
   color: azure;
+  font-family: 'Trispace', sans-serif;
+  font-weight: 600;
 }
 
 .image-main {
@@ -99,7 +134,9 @@ nav a:hover {
   height: auto;
   filter: grayscale(50%) contrast(120%) brightness(90%);
 }
-x
+
+/* about-page */
+
 .about {
   width: 100%;
   height: auto;
@@ -110,11 +147,11 @@ x
 .about-title h1 {
   text-transform: uppercase;
   font-size: 70px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Oswald', sans-serif;
+  text-align: center;
 }
 
 .about-title .iconify {
-  margin : 0 120px;
   font-size: 100px;
   text-align: center;
 }
@@ -124,15 +161,17 @@ x
 }
 
 .about-text h3 {
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 25px;
   padding-bottom: 30px;
 }
 
 .about-text p {
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Trispace', sans-serif;
   font-size: 18px;
 }
+
+/* projects */
 
 .projects {
   width: 100%;
@@ -149,7 +188,7 @@ x
 
 .projects h1 {
   padding-bottom: 10vh;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 100px;
   color: #fff;
 }
@@ -158,6 +197,8 @@ x
   width: 80%;
   height: auto;
 }
+
+/* contacts */
 
 .contacts {
   width: 100%;
@@ -169,11 +210,11 @@ x
 .contacts-title h1 {
   text-transform: uppercase;
   font-size: 70px;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 .contacts-text p {
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Trispace', sans-serif;
   font-size: 25px;
 }
 
@@ -186,6 +227,7 @@ x
   color: #000;
 }
 
+/* copyright */
 
 footer {
   text-align: center;
