--- a/style.css
+++ b/style.css
@@ -9,10 +9,9 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-html, body {
+body {
   width: 100%;
   height: auto;
   scroll-behavior: smooth;
@@ -117,7 +116,7 @@ nav .navbar-nav a:hover {
 
 .name-main h1 {
   font-size: 6vw;
-  color: azure;
+  color: #fafafa;
   font-family: 'Trispace', sans-serif;
   font-weight: 600;
 }
@@ -162,12 +161,15 @@ nav .navbar-nav a:hover {
 
 .about-text h3 {
   font-family: 'Oswald', sans-serif;
+  letter-spacing: .05em;
+  line-height: 40px;
   font-size: 25px;
   padding-bottom: 30px;
 }
 
 .about-text p {
   font-family: 'Trispace', sans-serif;
+  line-height: 35px;
   font-size: 18px;
 }
 
@@ -202,7 +204,7 @@ nav .navbar-nav a:hover {
 
 .contacts {
   width: 100%;
-  height: 60vh;
+  height: auto;
   background-color: aliceblue;
   padding: 18vh 0;
 }
@@ -211,15 +213,24 @@ nav .navbar-nav a:hover {
   text-transform: uppercase;
   font-size: 70px;
   font-family: 'Oswald', sans-serif;
+  text-align: center;
 }
 
 .contacts-text p {
   font-family: 'Trispace', sans-serif;
   font-size: 25px;
+  text-align: justify;
 }
 
-.contacts-social {
-  padding: 6vh 0;
+.contacts-social ul {
+  margin-top: 80px !important;
+  padding: 0 !important;
+}
+
+.contacts-social ul li {
+  display: inline-block;
+  list-style: none;
+  padding: 0 8vw;
 }
 
 .contacts-social .iconify {
@@ -230,7 +241,9 @@ nav .navbar-nav a:hover {
 /* copyright */
 
 footer {
+  position: relative;
   text-align: center;
+  bottom: 0;
   background-color: #111111;
   padding: 25px;
   font-family: Impact, Haettenschweiler;
