--- a/style.css
+++ b/style.css
@@ -11,23 +11,49 @@
   padding: 0;
 }
 
+html, body{
+  scroll-behavior: smooth;
+}
+
 body {
   width: 100%;
   height: auto;
-  scroll-behavior: smooth;
   overflow-x: hidden;
+}
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #0a0a0ae6;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888888;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #9e9e9e;
 }
 
 /* navbar */
 
 nav{
   height: auto;
-  background-color: rgba(10, 10, 10, 0.9);
+  background-color: #0a0a0ae6;
 }
 
 nav .navbar-brand{
   color: #fafafa;
-  font: 23px "Signature";
+  font: 20px "Signature";
+}
+
+@media (max-width: 980px) {
+  nav .navbar-brand{
+  font-size: 15px;
+  }
 }
 
 .nav-item {
@@ -38,8 +64,8 @@ nav .navbar-nav a {
   text-decoration: none;
   letter-spacing: .8mm;
   color: #fafafa;
-  font: 600 23px 'Oswald', sans-serif;
-  margin: 0 3vw;
+  font: 400 23px 'Oswald', sans-serif;
+  margin: 5px 3vw;
 }
 
 nav .navbar-nav a:hover {
@@ -112,7 +138,7 @@ nav .navbar-nav a:hover {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-55%, -50%);
+  transform: translate(-50%, -50%);
   z-index: 999;
 }
 
@@ -120,6 +146,7 @@ nav .navbar-nav a:hover {
   font-size: 6vw;
   color: #fafafa;
   font-family: 'Trispace', sans-serif;
+  text-align: center;
   font-weight: 600;
 }
 
@@ -136,16 +163,28 @@ nav .navbar-nav a:hover {
 }
 
 .image-main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-45%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
 }
 
 .image-main img {
-  width: 80%;
+  width: 50%;
   height: auto;
   filter: grayscale(50%) contrast(120%) brightness(90%);
+}
+
+@media (max-width: 980px) {
+  .image-main img {
+    width: 80%;
+  }
+  
+  .name-main h1 {
+    font-size: 10vw;
+  }
 }
 
 /* about-page */
@@ -231,7 +270,8 @@ nav .navbar-nav a:hover {
 
 @media (max-width: 980px) {
   .picture {
-    width: 60%;
+    width: 80%;
+    border: 1rem solid #eeeeee;
   }
 }
 
