--- a/style.css
+++ b/style.css
@@ -8,10 +8,23 @@
 }
 
 @font-face {
-  font-family: 'Cosi';
-  src: url('Fonts/Cosi_Azure.woff2') format('woff2'),
-      url('Fonts/Cosi_Azure.woff') format('woff');
+  font-family: 'Futurist';
+  src: url('Fonts/FuturistFixedWidthRegular.woff2') format('woff2'),
+      url('Fonts/FuturistFixedWidthRegular.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
 }
+
+@font-face {
+  font-family: 'Coyote';
+  src: url('Fonts/Coyote-SemiBoldDEMO.woff2') format('woff2'),
+      url('Fonts/Coyote-SemiBoldDEMO.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
 
 /* Code */
 
@@ -69,7 +82,7 @@ nav .navbar-nav a {
   text-decoration: none;
   letter-spacing: .8mm; 
   color: #fafafa;
-  font: 400 20px 'Cosi', sans-serif;
+  font: 400 20px 'Coyote', sans-serif;
   margin: 5px 3vw;
 }
 
@@ -145,13 +158,13 @@ nav .navbar-nav a:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 999;
+  z-index: 1;
 }
 
 .name-main h1 {
-  font-size: 5vw;
-  color: #fafafa;
-  font-family: 'Cosi';
+  font-size: 4.1vw;
+  color: rgba(255, 255, 255);
+  font-family: 'Futurist';
   text-align: center;
   font-weight: 600;
 }
@@ -175,10 +188,11 @@ nav .navbar-nav a:hover {
   width: 100%;
   height: 100vh;
   flex-direction: column;
+  z-index: 2;
 }
 
 .image-main img {
-  width: 50%;
+  width: 37%;
   height: auto;
   filter: grayscale(50%) contrast(120%) brightness(90%);
 }
@@ -195,7 +209,7 @@ nav .navbar-nav a:hover {
 .about-title h1 {
   text-transform: uppercase;
   font-size: 70px;
-  font-family: 'Cosi', sans-serif;
+  font-family: 'Futurist', sans-serif;
   text-align: center;
 }
 
@@ -246,7 +260,7 @@ nav .navbar-nav a:hover {
   text-transform: uppercase;
   font-size: 70px;
   line-height: 100px;
-  font-family: 'Cosi', sans-serif;
+  font-family: 'Futurist', sans-serif;
   text-align: center;
   color: #fff;
 }
@@ -298,7 +312,7 @@ nav .navbar-nav a:hover {
 .contacts-title h1 {
   text-transform: uppercase;
   font-size: 70px;
-  font-family: 'Cosi', sans-serif;
+  font-family: 'Futurist', sans-serif;
   text-align: center;
 }
 
@@ -321,7 +335,7 @@ nav .navbar-nav a:hover {
 
 .contacts-social .iconify {
   font-size: 30px;
-  color: #000;
+  color: #fff;
 }
 
 /* copyright */
@@ -349,13 +363,16 @@ footer {
   }
   
   .name-main h1 {
-    font-size: 9vw;
+    font-size: 8.2vw;
   }
 
   .picture {
     width: 80%;
     border: 1rem solid #eeeeee;
     margin: 40px 0;
+  }
+  .projects h1 {
+    font-size: 10vw;
   }
 }
 
@@ -364,11 +381,7 @@ footer {
   .about-title h1 {
     font-size: 15vw;
   }
-
-  .projects h1 {
-    font-size: 15vw;
-  }
-
+  
   .contacts-title h1 {
     font-size: 15vw;
   }
