--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ nav .navbar-nav a:hover {
 
 .contacts-social .iconify {
   font-size: 30px;
-  color: #fff;
+  color: #111111;
 }
 
 /* copyright */
