--- a/style.css
+++ b/style.css
@@ -346,8 +346,7 @@ footer {
   bottom: 0;
   background-color: #111111;
   padding: 25px;
-  font-family: Impact, Haettenschweiler;
-  font-weight: 400;
+  font-family: "Trispace";
   color: #f0f8ff;
 }
 
