--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ nav .navbar-nav a:hover {
 }
 
 .capture-heading {
-  padding: 80px 0 20px 0;
+  padding: 80px 0 20px;
 }
 
 .camera-icon .iconify {
